--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -11,3 +11,17 @@ services:
       PGDATA: /data/postgres
     volumes:
       - ./data/pg:/data/postgres
+
+  nest:
+    container_name: nest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3333:3333"
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: "postgresql://postgres:docker@postgres:5432/nest?schema=public"
+    volumes:
+      - .:/app
