--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -25,3 +25,9 @@ services:
       DATABASE_URL: "postgresql://postgres:docker@postgres:5432/nest?schema=public"
     volumes:
       - .:/app
+
+  redis:
+    container_name: nest-redis
+    image: redis:alpine
+    ports:
+      - "6379:6379"
