--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^5.60.5",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "15.0.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.60.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
